application-profiles: Set up final application profiles
I needed to pull some things out of application and host profiles
create a mion-huest-onlpv1|2. I also add a default-guest recipe
to start the onlp container on boot.

Signed-off-by: Eilís Ní Fhlannagáin <pidge@toganlabs.com>

--- a/conf/application-profiles/mion-guest-onlpv1.conf
+++ b/conf/application-profiles/mion-guest-onlpv1.conf
@@ -1,3 +1,5 @@
+require conf/platform-profiles/platform-${MACHINE}-onlpv1.conf
+
 ORYX_APPLICATION_PROFILE_PACKAGES = " \
     initscripts \
     start-sshd \
