--- a/conf/system-profiles/guest.conf
+++ b/conf/system-profiles/guest.conf
@@ -7,6 +7,10 @@ ORYX_SYSTEM_PROFILE_OUTPUT_FILES = "${ORYX_ROOTFS_IMAGE}"
 
 # Capture compressed rootfs tar archives for all machines
 IMAGE_FSTYPES = "tar.xz"
+IMAGE_TYPEDEP_container += "ext4"
+IMAGE_FEATURES = ""
+IMAGE_LINGUAS = ""
+NO_RECOMMENDATIONS = "1"
 
 # Use dumb-init as the init system
 VIRTUAL-RUNTIME_init_manager = "dumb-init"
