mion.conf: Remove some unneeded DISTRO/IMAGE_FEATURES
Don't need bluetooth and alsa etc for a switch.

Signed-off-by: Eilís Ní Fhlannagáin <pidge@toganlabs.com>

--- a/conf/distro/mion.conf
+++ b/conf/distro/mion.conf
@@ -146,8 +146,12 @@ VIRTUAL-RUNTIME_login_manager = "systemd"
 PREFERRED_PROVIDER_udev ?= "systemd"
 PREFERRED_PROVIDER_udev-utils ?= "systemd"
 
+# Remove certain DISTRO_FEATURES
+DISTRO_FEATURES_BACKFILL_CONSIDERED = "pulseaudio"
+DISTRO_FEATURES_BACKFILL_CONSIDERED = "gobject-introspection-data"
+DISTRO_FEATURES_remove = "wifi 3g bluetooth irda nfc pulseaudio bluez5"
+
 BAD_RECOMMENDATIONS ?= "busybox-syslog"
-DISTRO_FEATURES_remove += "alsa"
 # onie vars
 ONIE_VENDOR ?= "unknown"
 # TODO setup a mapping?
