mion-host-onie*.conf: Add system and application profiles for onie
This adds support for the new onie image creation bbclass.

Signed-off-by: Eilís Ní Fhlannagáin <pidge@toganlabs.com>

--- a/conf/distro/mion.conf
+++ b/conf/distro/mion.conf
@@ -11,6 +11,8 @@ DISTRO_FEATURES_DEFAULT = " \
     usbhost xattr nfs zeroconf pci 3g nfc \
     "
 
+ONIE_FILES ??= "${ORYX_BASE}/meta-mion/files/"
+
 # Customisation
 ROOT_HOME = "/root"
 COPY_LIC_MANIFEST = "0"
