WIP: Support for building ONIE images
Signed-off-by: John Toomey <john@toganlabs.com>

--- a/conf/distro/mion.conf
+++ b/conf/distro/mion.conf
@@ -1,4 +1,4 @@
-DISTRO_NAME = "MION (Mini Infrastructure OS for Networking"
+DISTRO_NAME = "MION (Mini Infrastructure OS for Networking)"
 DISTRO_VERSION = "${ORYX_VERSION}"
 TCLIBCAPPEND = ""
 
