--- a/conf/system-profiles/mion-native-onie.conf
+++ b/conf/system-profiles/mion-native-onie.conf
@@ -1,11 +1,12 @@
 ORYX_SYSTEM_PROFILE_TYPE = "native"
 
+ORYX_SYSTEM_PROFILE_OUTPUT_DEPENDS += "mion-onie-image:do_build"
+
 ORYX_SYSTEM_PROFILE_PACKAGES = " \
     packagegroup-base-extended \
     kernel-modules \
     default-guest \
     "
-INHERIT += "onie"
 
 ORYX_KERNEL_IMAGE = ""
 ORYX_KERNEL_IMAGE_qemux86 = "bzImage-${MACHINE}.bin"
@@ -17,7 +18,6 @@ IMAGE_FILE_EXTENSION = "tar.xz"
 
 IMAGE_FSTYPES = " \
     ${IMAGE_FILE_EXTENSION} \
-    ${IMAGE_FILE_EXTENSION}.xz \
     ${IMAGE_FILE_EXTENSION}.bmap \
     "
 
@@ -33,4 +33,3 @@ ORYX_SYSTEM_PROFILE_OUTPUT_FILES = " \
 # Use u-boot for Raspberry Pi
 RPI_USE_U_BOOT = "1"
 
-ROOTFS_POSTPROCESS_COMMAND += " onieimage_create;"
