FIX: Mender system profile and default guest config
Signed-off-by: John Toomey <john@toganlabs.com>

--- a/conf/application-profiles/mion-host-onie-onlpv2.conf
+++ b/conf/application-profiles/mion-host-onie-onlpv2.conf
@@ -1,2 +1,6 @@
 require conf/platform-profiles/platform-${MACHINE}-onlpv2.conf
 require conf/application-profiles/mion-host-prod.conf
+
+ORYX_LOCAL_FEED_APPLICATION_PROFILES ?= "mion-guest-onlpv2"
+ORYX_LOCAL_FEED_IMAGES = "guest:mion-guest-onlpv2"
+ORYX_APPLICATION_PROFILE_PACKAGES += " oryx-local-feed "
