--- a/conf/system-profiles/mion-native-mender.conf
+++ b/conf/system-profiles/mion-native-mender.conf
@@ -6,9 +6,7 @@
 
 require conf/system-profiles/mion-native.conf
 
-IMAGE_FILE_EXTENSION = "sdimg"
-
-IMAGE_FILE_EXTENSION_qemuall = "uefiimg"
+IMAGE_FILE_EXTENSION = "uefiimg"
 
 ################################################################################
 # Mender
@@ -22,6 +20,8 @@ MENDER_DATA_PART_SIZE_MB = "2048"
 #MENDER_SERVER_URL = "https://hosted.mender.io"
 #MENDER_TENANT_TOKEN = ""
 
+IMAGE_FSTYPES = " \
+    ${IMAGE_FILE_EXTENSION} \
     ${IMAGE_FILE_EXTENSION}.xz \
     ${IMAGE_FILE_EXTENSION}.bmap \
     "
@@ -35,3 +35,9 @@ ORYX_SYSTEM_PROFILE_OUTPUT_FILES = " \
     ${ORYX_ROOTFS_BMAP} \
     ${ORYX_ROOTFS_MENDER} \
     "
+
+###############################################################################
+# Stordis BF2556X-1T
+###############################################################################
+
+MENDER_STORAGE_DEVICE_stordis-bf2556x-1t = "/dev/sda"
