mion-guest-onlpv1/2: Add onlpv1 or 2
We didn't add onlpv1 or 2 into the guest. Now they are there.

Signed-off-by: Eilís Ní Fhlannagáin <pidge@toganlabs.com>

--- a/conf/application-profiles/mion-guest-onlpv1.conf
+++ b/conf/application-profiles/mion-guest-onlpv1.conf
@@ -3,6 +3,7 @@ require conf/platform-profiles/platform-${MACHINE}-onlpv1.conf
 ORYX_APPLICATION_PROFILE_PACKAGES = " \
     initscripts \
     start-sshd \
+    onlpv1 \
     ${MION_GUEST_INSTALL} \
     "
 
