--- a/conf/application-profiles/mion-guest-onlpv2.conf
+++ b/conf/application-profiles/mion-guest-onlpv2.conf
@@ -3,6 +3,7 @@ require conf/platform-profiles/platform-${MACHINE}-onlpv2.conf
 ORYX_APPLICATION_PROFILE_PACKAGES = " \
     initscripts \
     start-sshd \
+    onlpv2 \
     ${MION_GUEST_INSTALL} \
     "
 
