Generate mender installer image
Signed-off-by: John Toomey <john@toganlabs.com>

--- a/conf/system-profiles/mion-native-mender.conf
+++ b/conf/system-profiles/mion-native-mender.conf
@@ -24,6 +24,7 @@ IMAGE_FSTYPES = " \
     ${IMAGE_FILE_EXTENSION} \
     ${IMAGE_FILE_EXTENSION}.xz \
     ${IMAGE_FILE_EXTENSION}.bmap \
+    hddimg \
     "
 
 ORYX_ROOTFS_IMAGE = "${ORYX_IMAGE_BASENAME}-${MACHINE}.${IMAGE_FILE_EXTENSION}.xz"
