srunc.py: Rename oryxcmd to srunc and fix containers
- Rename all instances of oryxcmd to srunc (sinple runc)
- Fix container CAPABILITIES to enable ONLPv*
- Add ONLP dependencies to container package
- Add missing /dev/i2c* devices to container config required for ONLP
- Add missing package.xml to ONLPv* install

Signed-off-by: John Toomey <john@toganlabs.com>
Signed-off-by: Eilís Ní Fhlannagáin <pidge@toganlabs.com>

--- a/meta-mion/conf/distro/mion.conf
+++ b/meta-mion/conf/distro/mion.conf
@@ -38,6 +38,11 @@ MION_GUEST_CAPABILITIES ?= " \
     CAP_AUDIT_WRITE \
     CAP_KILL \
     CAP_NET_BIND_SERVICE \
+    CAP_SYS_CHROOT \
+    CAP_SYS_RAWIO \
+    CAP_IPC_OWNER \
+    CAP_SETGID \
+    CAP_SETUID \
     "
 
 # Blacklist recipes with missing dependencies in our layer setup
