--- a/meta-mion/recipes-platform/onlpv2/onlpv2/onlpdump.service
+++ b/meta-mion/recipes-platform/onlpv2/onlpv2/onlpdump.service
@@ -3,7 +3,7 @@ Description=onlpdump platform manager daemon
 After=network.target
 
 [Service]
-ExecStart=@BINDIR@/onlpdump -M /run/onlpdump.pid
+ExecStart=@BINDIR@/onlps -M /run/onlpdump.pid
 PIDFile=/run/onlpdump.pid
 Type=simple
 
