mion.conf: Add some sane distro settings.
First, let's bump this to 0.9+snapshot and then add some sane
distro settings like security and uninative tarball and sdk
settings.

Signed-off-by: Eilís Ní Fhlannagáin <pidge@toganlabs.com>

--- a/meta-mion/conf/distro/mion.conf
+++ b/meta-mion/conf/distro/mion.conf
@@ -1,6 +1,5 @@
 DISTRO_NAME = "mion (Mini Infrastructure OS for Networking)"
-DISTRO_VERSION = "Achill-0.9"
-TCLIBCAPPEND = ""
+DISTRO_VERSION = "Achill-0.9+snapshot"
 
 MAINTAINER = "Togán Labs <support@toganlabs.com>"
 
@@ -54,7 +53,20 @@ PNBLACKLIST[nagios-nrpe] = "Blacklisted dependency 'nagios-core'"
 PNBLACKLIST[nagios-nsca] = "Blacklisted dependency 'nagios-core'"
 PNBLACKLIST[packagegroup-meta-oe] = "Bad dependencies"
 
-# Use Yocto Project mirrors incase sources disappear
+# mion SDK bits
+SDK_VENDOR = "-mionsdk"
+SDK_VERSION = "${@d.getVar('DISTRO_VERSION').replace('snapshot-${DATE}', 'snapshot')}"
+
+TARGET_VENDOR = "-mion"
+
+LOCALCONF_VERSION = "1"
+
+DISTRO_VERSION[vardepsexclude] = "DATE"
+SDK_VERSION[vardepsexclude] = "DATE"
+
+SDK_NAME = "${DISTRO}-${TCLIBC}-${SDKMACHINE}-${IMAGE_BASENAME}-${TUNE_PKGARCH}-${MACHINE}"
+SDKPATH = "/opt/${DISTRO}/${SDK_VERSION}"
+
 PREMIRRORS ??= "\
 bzr://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
 cvs://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
@@ -133,4 +145,22 @@ ONIE_PLATFORM ?= "${ONIE_ARCH}-${ONIE_MACHINE}-r${ONIE_MACHINE_REV}"
 ONL_DEBIAN_SUITE = "mion"
 ONL_PLATFORM="${@'${ONIE_ARCH}-${ONIE_MACHINE}'.replace('_', '-')}"
 ONL_ARCH="${@'${ONIE_ARCH}'.replace('_', '-')}"
+
+#
+# OELAYOUT_ABI allows us to notify users when the format of TMPDIR changes in
+# an incompatible way. Such changes should usually be detailed in the commit
+# that breaks the format and have been previously discussed on the mailing list
+# with general agreement from the core team.
+#
+OELAYOUT_ABI = "12"
+
+# Speed up builds and squish the need to run some of the native bits
+require conf/distro/include/yocto-uninative.inc
+INHERIT += "uninative"
+
+INHERIT += "reproducible_build"
+
+BB_SIGNATURE_HANDLER ?= "OEEquivHash"
+BB_HASHSERVE ??= "auto"
+
 
