mion.conf: Switch release to Blasket-2020.12
Signed-off-by: Eilís Ní Fhlannagáin <pidge@toganlabs.com>

--- a/meta-mion/conf/distro/mion.conf
+++ b/meta-mion/conf/distro/mion.conf
@@ -1,5 +1,5 @@
 DISTRO_NAME = "mion (Mini Infrastructure OS for Networking)"
-DISTRO_VERSION = "Achill-0.9+snapshot"
+DISTRO_VERSION = "Blasket-2020.12"
 
 MAINTAINER = "Togán Labs <support@toganlabs.com>"
 
