mion-image-core.inc: Remove and replace busybox
Replace busybox with the full version of all tools and add some missing
utilities to the base image. This required the replacment of
packagegroup-core-boot and removal of everything that depended on busybox.

Signed-off-by: John Toomey <john@toganlabs.com>

--- a/meta-mion/conf/distro/mion.conf
+++ b/meta-mion/conf/distro/mion.conf
@@ -15,13 +15,13 @@ DISTRO_FEATURES_DEFAULT = "ext2 ipv6 usbhost nfs pci nfs systemd"
 DISTRO_FEATURES_remove += " alsa bluetooth opengl pcmcia wayland wifi x11  3g pulseaudio"
 
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "gobject-introspection-data"
-BAD_RECOMMENDATIONS ?= "busybox-syslog"
 
 # Use systemd
 VIRTUAL-RUNTIME_init_manager = "systemd"
-DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
 VIRTUAL-RUNTIME_initscripts = ""
-VIRTUAL-RUNTIME_login_manager = "systemd"
+VIRTUAL-RUNTIME_login_manager = "shadow-base"
+VIRTUAL-RUNTIME_syslog = ""
+DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
 PREFERRED_PROVIDER_udev ?= "systemd"
 PREFERRED_PROVIDER_udev-utils ?= "systemd"
 
