onlpv1: Fix onlpdump service
the onlpdump service should be running onlpd which isn't getting
installed on the image. This installs it and changes what's run.

Signed-off-by: Eilís Ní Fhlannagáin <pidge@toganlabs.com>

--- a/meta-mion/recipes-platform/onlpv1/onlpv1/onlpdump.service
+++ b/meta-mion/recipes-platform/onlpv1/onlpv1/onlpdump.service
@@ -3,7 +3,7 @@ Description=onlpdump platform manager daemon
 After=network.target
 
 [Service]
-ExecStart=@BINDIR@/onlpdump -M /run/onlpdump.pid
+ExecStart=@BINDIR@/onlpd -M /run/onlpdump.pid
 PIDFile=/run/onlpdump.pid
 Type=simple
 
