--- a/meta-mion/conf/distro/mion.conf
+++ b/meta-mion/conf/distro/mion.conf
@@ -1,5 +1,5 @@
 DISTRO_NAME = "mion (Mini Infrastructure OS for Networking)"
-DISTRO_VERSION = "Copeland-2021.03"
+DISTRO_VERSION = "Copeland-2021.03+snapshot"
 
 MAINTAINER = "Togán Labs <support@toganlabs.com>"
 
