onlpdump.service: Reduce timeout on onlpd shutdown
There does not appear to be a clean way to kill the onlpd service so it
hangs for 90 seconds on shutdown, after which, systemd kills it. This
patch reduces the timeout for systemdd to kill it quickly.

Signed-off-by: John Toomey <john@toganlabs.com>

--- a/meta-mion/recipes-platform/onlpv2/onlpv2/onlpdump.service
+++ b/meta-mion/recipes-platform/onlpv2/onlpv2/onlpdump.service
@@ -4,6 +4,7 @@ After=network.target
 
 [Service]
 ExecStart=@BINDIR@/onlps -M /run/onlpdump.pid
+TimeoutStopSec=1
 PIDFile=/run/onlpdump.pid
 Type=simple
 
