--- a/meta-mion/recipes-platform/onlpv1/onlpv1/onlpdump.service
+++ b/meta-mion/recipes-platform/onlpv1/onlpv1/onlpdump.service
@@ -4,6 +4,7 @@ After=network.target
 
 [Service]
 ExecStart=@BINDIR@/onlpd -M /run/onlpdump.pid
+TimeoutStopSec=1
 PIDFile=/run/onlpdump.pid
 Type=simple
 
