--- a/.github/workflows/repo_dispatch.yml
+++ b/.github/workflows/repo_dispatch.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - name: Dispatch on push to dunfell
         run: |
-          curl -X POST https://api.github.com/repos/NetworkGradeLinux/mion-ci/dispatches \
-          -H 'Accept: application/vnd.github.everest-preview+json' \
-          -u ${{ secrets.ACCESS_TOKEN }} \
+          curl --request POST \
+          --url 'https://api.github.com/repos/NetworkGradeLinux/mion-ci/dispatches' \
+          --header 'authorization: Bearer ${{ secrets.ACCESS_TOKEN }}' \
           --data '{"event_type": "push", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }}'
