Revert "Allow additional image fstypes"
This reverts commit ec89dc9d3d33f1bf3ef0982424ff7fbea15fef95.

--- a/conf/distro/mion.conf
+++ b/conf/distro/mion.conf
@@ -136,7 +136,7 @@ BB_HASHSERVE ??= "auto"
 
 IMAGE_FILE_EXTENSION = "tar.xz"
 
-IMAGE_FSTYPES += " \
+IMAGE_FSTYPES = " \
     ${IMAGE_FILE_EXTENSION} \
     ${IMAGE_FILE_EXTENSION}.bmap \
     "
