mion.conf: append IMAGE_FSTYPES
This is crushing IMAGE_FSTYPES set elsewhere

Signed-off-by: Eilís Ní Fhlannagáin <pidge@toganlabs.com>

--- a/conf/distro/mion.conf
+++ b/conf/distro/mion.conf
@@ -134,9 +134,9 @@ INHERIT += "reproducible_build"
 BB_SIGNATURE_HANDLER ?= "OEEquivHash"
 BB_HASHSERVE ??= "auto"
 
-IMAGE_FILE_EXTENSION = "tar.xz"
+IMAGE_FILE_EXTENSION += "tar.xz"
 
-IMAGE_FSTYPES = " \
+IMAGE_FSTYPES += " \
     ${IMAGE_FILE_EXTENSION} \
     ${IMAGE_FILE_EXTENSION}.bmap \
     "
