--- a/conf/distro/mion.conf
+++ b/conf/distro/mion.conf
@@ -1,7 +1,7 @@
 DISTRO_NAME = "mion (Mini Infrastructure OS for Networking)"
-DISTRO_DATE = "2021.03"
-DISTRO_CODE = "Copeland"
-DISTRO_VERSION = "${DISTRO_CODE}-${DISTRO_DATE}+snapshot"
+DISTRO_DATE = "2021.06"
+DISTRO_CODE = "Dernish"
+DISTRO_VERSION = "${DISTRO_CODE}-${DISTRO_DATE}"
 
 MAINTAINER = "Togán Labs <support@toganlabs.com>"
 
