mion.conf: Bump to Dernish+snapshot
Post release we bump to +snapshot

Signed-off-by: Eilís Ní Fhlannagáin <pidge@toganlabs.com>

--- a/conf/distro/mion.conf
+++ b/conf/distro/mion.conf
@@ -1,7 +1,7 @@
 DISTRO_NAME = "mion (Mini Infrastructure OS for Networking)"
 DISTRO_DATE = "2021.06"
 DISTRO_CODE = "Dernish"
-DISTRO_VERSION = "${DISTRO_CODE}-${DISTRO_DATE}"
+DISTRO_VERSION = "${DISTRO_CODE}-${DISTRO_DATE}+snapshot"
 
 MAINTAINER = "Togán Labs <support@toganlabs.com>"
 
