mion.conf: Remove NFS from DISTRO_FEATURES
The inclusion of NFS in distro features is installing a NFSD service
which is failing to start on boot due to a missing kernel modules - the
easiest thing to do is remove the distro feature which prevents the
service being installed.

Signed-off-by: John Toomey <john@toganlabs.com>

--- a/conf/distro/mion.conf
+++ b/conf/distro/mion.conf
@@ -13,7 +13,7 @@ COPY_LIC_MANIFEST = "0"
 COPY_LIC_DIRS = "0"
 
 # Distro features
-DISTRO_FEATURES_DEFAULT = "ext2 ipv6 usbhost nfs pci nfs systemd"
+DISTRO_FEATURES_DEFAULT = "ext2 ipv6 usbhost pci systemd"
 DISTRO_FEATURES_remove += " alsa bluetooth opengl pcmcia wayland wifi x11  3g pulseaudio"
 
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "gobject-introspection-data"
